--- a/index.html
+++ b/index.html
@@ -13,6 +13,43 @@
     </header>
     <main>
       <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains information about the webpage</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>The contents of the body are placed inside different sections such</li>
+          <ul>
+            <li>Header</li>
+            <li>All other elements enclosed within section tag</li>
+            <li>Footer</li>
+          </ul>
+        </ul>
+      </section>
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter your CSS notes here</li>
+        </ul>
+
+      </section>
+      <section class="card" id="git-section">
+        <h2>GIT</h2>
+        <ul>
+          <li>git status: checks what branch we are currently on</li>
+          <li>git checkout main: checks out the main branch</li>
+          <li>git pull origin main: pulls the files and contents from main branch</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+        </ul>
+
+      </section>
+
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Enter JavaScript notes here</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
