added code to HTML

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
           <li>git checkout main: checks out the main branch</li>
           <li>git pull origin main: pulls the files and contents from main branch</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>git add -A : to commit changes to thw working directory</li>
+          <li>git commit -m "added code to HTML File" : to commit the changes to our github repository</li>
         </ul>
 
       </section>
